--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ header {
   height: 70px;
   background-color: #ec715f;
 }
-
 nav {
   width: 1024px;
   margin: 0 auto;
@@ -32,5 +31,27 @@ nav {
   color: #FAFAFA;
   float: left;
   line-height: 70px;
+}
 
+.mainvisual {
+  width: 100%;
+}
+
+.mv {
+  height: 650px;
+  background-image:url(img/mv.png);
+  background-size: cover;
+  background-position: center;
+}
+.mv-title {
+  font-size: 64px;
+  color: #FAFAFA;
+  padding-top: 200px;
+  text-align: center;
+}
+.mv-text {
+  font-size: 20px;
+  color: #FAFAFA;
+  text-align: center;
+  padding-top: 10px;
 }
