--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-clearfix:after {
+.clearfix::after {
   content: "";
   display: block;
   clear: both;
@@ -54,4 +54,54 @@ nav {
   color: #FAFAFA;
   text-align: center;
   padding-top: 10px;
+}
+
+.Portfolio {
+  width: 920px;
+  margin: 0 auto;
+  background-color: #ECEFF1;
+}
+.P-title {
+  font-size: 32px;
+  color: #000000;
+  padding-top: 90px;
+  text-align: center;
+}
+.P-text {
+  font-size: 16px;
+  color: #000000;
+  padding-top: 30px;
+  text-align: center;
+}
+.boxes {
+  padding-top: 30px;
+}
+.box {
+  width: 300px;
+  height: 250px;
+  float: left;
+  background-size: cover;
+  background-position: center;
+}
+.box:nth-child(1) {
+  margin: 0 10px 10px 0;
+  background-image:url(img/sketch.jpg);
+}
+.box:nth-child(2) {
+  margin: 0 10px 10px 0;
+  background-image:url(img/websuku.png);
+}
+.box:nth-child(3) {
+  background-image:url(img/write.jpg);
+}
+.box:nth-child(4) {
+  margin-right: 10px;
+  background-image:url(img/webcamp.png);
+}
+.box:nth-child(5) {
+  margin-right: 10px;
+  background-image:url(img/talk.jpg);
+}
+.box:nth-child(6) {
+  background-image:url(img/webcamp-mother.png);
 }
