--- a/style.css
+++ b/style.css
@@ -14,6 +14,17 @@ h2 {
   color: #000000;
   padding-top: 90px;
   text-align: center;
+  position: relative;
+}
+h2:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -15px;
+  width: 70px;
+  height: 3px;
+  background-color: #EC715F;
+  transform: translateX(-50%);
 }
 h3 {
   font-size: 20px;
@@ -22,6 +33,9 @@ p {
   font-size: 16px;
   color: #000000;
   text-align: center;
+}
+a {
+  color: #000000;
 }
 
 header {
@@ -80,7 +94,7 @@ nav {
   margin: 0 auto;
 }
 .P-text {
-  padding-top: 30px;
+  padding-top: 38px;
 }
 .boxes {
   padding-top: 30px;
@@ -125,7 +139,7 @@ nav {
   margin: 0 auto;
 }
 .F-text {
-  padding-top: 30px;
+  padding-top: 38px;
 }
 .Strengths {
   padding-bottom: 90px;
@@ -140,10 +154,10 @@ nav {
 .Strength:nth-child(2) {
   margin: 0 10px;
 }
-i {
+.fa-code, .fa-desktop, .fa-cogs {
   font-size: 60px;
 }
-.S-title {
+.St-title {
   padding: 10px 0;
 }
 
@@ -164,6 +178,9 @@ i {
   width: 512px;
   text-align: center;
 }
+.circle {
+  border-radius: 50%;
+}
 .Pr-text_box {
   width: 512px;
   float: left;
@@ -173,4 +190,65 @@ i {
 }
 .Pr-title2 {
   padding-top: 20px;
+}
+
+.Contact {
+  width: 100%;
+}
+.Contact .container {
+  width: 800px;
+  margin: 0 auto;
+}
+.C-text {
+  padding-top: 38px;
+}
+.contact-infomation {
+  width: 400px;
+  text-align: center;
+  float: left;
+  padding-bottom: 90px;
+}
+.C-box {
+  width: 130px;
+  margin: 0 auto;
+  text-align: left;
+}
+.mail, .tel {
+  padding-bottom: 5px;
+}
+.mail {
+  padding-top: 30px;
+}
+.tel {
+  padding-top: 20px;
+}
+.SNS {
+  width: 400px;
+  text-align: center;
+  padding: 30px 0 90px 0;
+  float: left;
+}
+.S-box {
+  width: 190px;
+  margin: 0 auto;
+}
+.S-title {
+  text-align: left;
+}
+.fa-facebook-f, .fa-twitter, .fa-instagram {
+  font-size: 50px;
+  padding-top: 5px;
+}
+.fa-twitter {
+  margin: 0 20px;
+}
+footer {
+  width: 100%;
+  height: 60px;
+  background-color: #EC715F;
+}
+.copyright {
+  text-align: center;
+  color: #FAFAFA;
+  line-height: 60px;
 }
