--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ a {
 }
 
 header {
+  width: 100%;
   height: 70px;
   background-color: #ec715f;
 }
@@ -185,11 +186,11 @@ nav {
   width: 512px;
   float: left;
 }
-.Pr-title {
-  padding-bottom: 5px;
-}
 .Pr-title2 {
   padding-top: 20px;
+}
+.Pr-text {
+  padding-top:5px;
 }
 
 .Contact {
@@ -251,4 +252,155 @@ footer {
   text-align: center;
   color: #FAFAFA;
   line-height: 60px;
+}
+
+@media screen and (max-width: 767px){
+h2, h3, p {
+  width: 90%;
+  margin: 0 5%;
+}
+
+header {
+  height: 50px;
+}
+nav {
+  width: 90%;
+  margin: 0 5%;
+}
+.logo {
+  height: 50px;
+}
+.nav-bar {
+  display: none;
+}
+.trigger, span {
+  display: inline-block;
+  transition: all, 4s;
+  box-sizing: border-box;
+}
+.trigger {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  border: 2px solid #FAFAFA;
+  float: right;
+  margin: 5px 0;
+}
+span {
+  position: absolute;
+  left: 4px;
+  width: 80%;
+  height: 4px;
+  background-color: #FAFAFA;
+  border-radius: 4px;
+}
+span:nth-of-type(1) {
+  top: 25%;
+}
+span:nth-of-type(2) {
+  top: 45%;
+}
+span:nth-of-type(3) {
+  bottom: 25%;
+}
+
+.mv {
+  width: 90%;
+  background-image:url(img/code.png);
+  background-size: cover;
+  background-position: center;
+  margin: 0 5%;
+}
+.mv-title {
+  font-size: 40px;
+}
+.mv-text {
+  font-size: 18px;
+}
+
+.Portfolio .container {
+  width: 90%;
+}
+.boxes {
+  width: 90%;
+  height: auto;
+  margin: 0 5%;
+}
+.box {
+  float: none;
+}
+.box:nth-child(even) {
+  margin: 0 auto 10px auto;
+}
+.box:nth-child(odd) {
+  display: none;
+}
+
+.Feature .container {
+  width: 90%;
+  margin: 0 5%;
+}
+.Strengths {
+  width: 90%;
+  margin: 0 5%;
+}
+.Strength {
+  width: 90%;
+  margin: 0 5%;
+}
+.Strength:nth-child(2) {
+  margin: 0 5%;
+}
+
+.Profile .container {
+  width: 90%;
+  margin: 0 5%;
+}
+.Pr-box {
+  width: 90%;
+  margin: 0 5%;
+}
+.Pr-image {
+  width: 90%;
+  margin: 0 5%;
+}
+.Pr-text_box {
+  width: 90%;
+  margin: 0 5%;
+}
+.Pr-title, .Pr-title2 {
+  text-align: center;
+}
+.Pr-title {
+  padding-top: 20px;
+}
+
+.Contact .container {
+  width: 90%;
+  margin: 0 5%;
+}
+.contact-infomation {
+  width: 90%;
+  padding: 0;
+  margin: 0 5%;
+}
+.C-box {
+  width: 90%;
+  margin: 0 5%;
+  text-align: center;
+}
+.SNS {
+  width: 90%;
+  margin: 0 5%;
+  padding-top: 20px;
+}
+.S-title {
+  text-align: center;
+}
+.fa-facebook-f, .fa-twitter, .fa-instagram {
+  padding-top: 5px;
+}
+.fa-twitter {
+  margin:0 8px;
+}
 }
